--- a/app/views/web/ost/roadmap/desktop/_2021-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2021-q1.erb
@@ -1,4 +1,4 @@
-<div class="q-elements" id="2021-q1">
+<div class="<% if defined? visible_class %><%= visible_class %><% else %>q-elements<% end %>" id="2021-q1">
 
   <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
     year: '2021',
