--- a/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
+++ b/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
@@ -1,3 +1,4 @@
+<% if (mobile_view && year == 2018 && quarter == 4) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2018',
   quarter: 'Q4',
@@ -12,7 +13,9 @@
     </div>
   </div>
 </div>
+<%end %>
 
+<% if (mobile_view && year == 2019 && quarter == 1) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q1',
@@ -27,7 +30,9 @@
     </div>
   </div>
 </div>
+<%end %>
 
+<% if (mobile_view && year == 2019 && quarter == 2) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q2',
@@ -42,7 +47,9 @@
     </div>
   </div>
 </div>
+<%end %>
 
+<% if (mobile_view && year == 2019 && quarter == 3) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q3',
@@ -57,7 +64,9 @@
     </div>
   </div>
 </div>
+<%end %>
 
+<% if (mobile_view && year == 2019 && quarter == 4) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q4',
@@ -72,7 +81,9 @@
     </div>
   </div>
 </div>
+<%end %>
 
+<% if (mobile_view && year == 2020 && quarter == 1) || !mobile_view %>
 <div class="row quarters-year-row">
   <div class="col-12 mt-5">
     <div class="container-content q1-bg text-center">
@@ -90,7 +101,9 @@
     </div>
   </div>
 </div>
+<%end %>
 
+<% if (mobile_view && year == 2020 && quarter == 2) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2020',
   quarter: 'Q2',
@@ -105,7 +118,9 @@
     </div>
   </div>
 </div>
+<%end %>
 
+<% if (mobile_view && year == 2020 && quarter == 4) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2020',
   quarter: 'Q4',
@@ -120,7 +135,9 @@
     </div>
   </div>
 </div>
+<%end %>
 
+<% if (mobile_view && year == 2021 && quarter == 2) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2021',
   quarter: 'Q2',
@@ -135,3 +152,4 @@
     </div>
   </div>
 </div>
+<%end %>
