--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -1,3 +1,4 @@
+<% if (mobile_view && year == 2017 && quarter == 4) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2017',
   quarter: 'Q4',
@@ -35,7 +36,9 @@
     </div>
   </div>
 </div>
+<% end %>
 
+<% if (mobile_view && year == 2018 && quarter == 1) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2018',
   quarter: 'Q1',
@@ -87,7 +90,9 @@
     </div>
   </div>
 </div>
+<% end %>
 
+<% if (mobile_view && year == 2018 && quarter == 3) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2018',
   quarter: 'Q3',
@@ -133,7 +138,9 @@
     </div>
   </div>
 </div>
+<% end %>
 
+<% if (mobile_view && year == 2018 && quarter == 4) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2018',
   quarter: 'Q4',
@@ -180,7 +187,9 @@
     </div>
   </div>
 </div>
+<% end%>
 
+<% if (mobile_view && year == 2019 && quarter == 1) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q1',
@@ -204,7 +213,9 @@
     </div>
   </div>
 </div>
+<% end%>
 
+<% if (mobile_view && year == 2019 && quarter == 2) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q2',
@@ -222,7 +233,9 @@
     </div>
   </div>
 </div>
+<% end%>
 
+<% if (mobile_view && year == 2019 && quarter == 3) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q3',
@@ -246,7 +259,9 @@
     </div>
   </div>
 </div>
+<% end%>
 
+<% if (mobile_view && year == 2019 && quarter == 4) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q4',
@@ -263,7 +278,9 @@
     </div>
   </div>
 </div>
+<% end%>
 
+<% if (mobile_view && year == 2020 && quarter == 2) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2020',
   quarter: 'Q2',
@@ -277,7 +294,9 @@
     </div>
   </div>
 </div>
+<% end%>
 
+<% if (mobile_view && year == 2020 && quarter == 4) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2020',
   quarter: 'Q4',
@@ -291,7 +310,9 @@
     </div>
   </div>
 </div>
+<% end%>
 
+<% if (mobile_view && year == 2021 && quarter == 2) || !mobile_view %>
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2021',
   quarter: 'Q2',
@@ -305,3 +326,4 @@
     </div>
   </div>
 </div>
+<% end%>
