--- a/app/views/web/ost/index/_roadmap.erb
+++ b/app/views/web/ost/index/_roadmap.erb
@@ -1,10 +1,14 @@
+<%
+  year = Time.now.year
+  quarter = ((Time.now.month - 1) / 3) + 1
+%>
 <div class="d-none d-md-block">
   <div class="container">
     <div class="row">
       <div class="col-12 roadmap-container">
         <%= render :partial => "/web/ost/index/roadmap-categories" %>
         <div class="mt-5">
-          <%= render :partial => "/web/ost/roadmap/desktop/2018-q4", locals: {
+          <%= render :partial => "/web/ost/roadmap/desktop/"+year.to_s+"-q"+quarter.to_s, locals: {
               visible_class: ''
           } %>
         </div>
