--- a/app/views/web/ost/roadmap/desktop/_2017-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2017-q4.erb
@@ -1,4 +1,4 @@
-<div class="q-elements" id="2017-q4">
+<div class="<% if defined? visible_class %><%= visible_class %><% else %>q-elements<% end %>" id="2017-q4">
 
   <div class="mt-5">
     <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
