--- a/app/views/web/ost/roadmap/desktop/_2019-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q3.erb
@@ -1,4 +1,4 @@
-<div class="q-elements" id="2019-q3">
+<div class="<% if defined? visible_class %><%= visible_class %><% else %>q-elements<% end %>" id="2019-q3">
 
   <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
     year: '2019',
