--- a/app/views/web/ost/roadmap/desktop/_2020-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2020-q1.erb
@@ -1,4 +1,4 @@
-<div class="q-elements" id="2020-q1">
+<div class="<% if defined? visible_class %><%= visible_class %><% else %>q-elements<% end %>" id="2020-q1">
 
   <div class="row quarters-year-row">
     <div class="col-12 text-center">
