--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -4,7 +4,7 @@
       <div class="row align-items-center">
         <div class="col-sm-12 col-md-6">
           <h2>Scalable Token Economies</h2>
-          <p>OST is designed for Internet-grade transaction volumes and speeds. OST leads development of the OpenST Protocol for launching Branded Token economies for mainstream businesses, and OpenST Mosiac a scaling solution for finalizing many thousands of transactions per second asynchronously on Ethereum at low cost.</p>
+          <p>OST is designed for Internet-grade transaction volumes and speeds. OST leads development of the OpenST Protocol for launching Branded Token economies for mainstream businesses, and OpenST Mosaic a scaling solution for finalizing many thousands of transactions per second asynchronously on Ethereum at low cost.</p>
           <div class="my-4">
             <a href="https://github.com/OpenSTFoundation" class="btn btn-primary my-2 my-md-3" title="GITHUB" target="_blank">GITHUB</a>
             <a href="https://discuss.openst.org/" class="btn btn-secondary openst-forum my-2 my-md-3 ml-3 " title="PROTOCOL FORUM" target="_blank">PROTOCOL FORUM</a>
