--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -34,7 +34,7 @@
               <p>The OpenST Protocol enables the creation of Branded Tokens as stored value on auxilliary blockchains with the value of those tokens backed by staked cryptoassets on Ethereum.</p>
             </div>
             <div>
-              <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="white-paper-link" target="_blank" title="WHITE PAPER">
+              <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="white-paper-link d-inline-block" target="_blank" title="WHITE PAPER">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#white-paper-blockchain-infrastructure"></use>
@@ -42,7 +42,7 @@
                 </svg>
                 <span>OPENST WHITE PAPER</span>
               </a>
-              <a href="https://github.com/OpenSTFoundation" class="github-link ml-3" target="_blank" title="GITHUB">
+              <a href="https://github.com/OpenSTFoundation" class="github-link ml-md-3 mt-3 mt-md-0 d-inline-block" target="_blank" title="GITHUB">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-github-icon"></use>
@@ -67,7 +67,7 @@
               <p style="flex: 1 1 auto;">OpenST Mosaic introduces metablockchains to enable Internet-grade transaction throughput on Ethereum. Your transactions run at lightning speed on auxilliary blockchains with economic finality secured asynchronously on Ethereum.</p>
             </div>
             <div>
-              <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" class="white-paper-link" target="_blank" title="WHITE PAPER">
+              <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" class="white-paper-link d-inline-block" target="_blank" title="WHITE PAPER">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#white-paper-blockchain-infrastructure"></use>
@@ -75,7 +75,7 @@
                 </svg>
                 <span>MOSAIC WHITE PAPER</span>
               </a>
-              <a href="https://github.com/OpenSTFoundation/mosaic-contracts" class="github-link ml-3" target="_blank" title="GITHUB">
+              <a href="https://github.com/OpenSTFoundation/mosaic-contracts" class="github-link ml-md-3 mt-3 mt-md-0 d-inline-block" target="_blank" title="GITHUB">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-github-icon"></use>
