calendar show hide

--- a/app/views/web/ost/events_news/_events.erb
+++ b/app/views/web/ost/events_news/_events.erb
@@ -97,7 +97,11 @@ location=<%=item['event_desc']%>
         <div class="col-md-5 pb-5 pl-md-5 order-1 order-md-2 events-date-section">
           <div class="row events-date-section-content pl-lg-5">
             <div class="col-12 h-100 p-3 date-section-background">
-              <div class="clear-selection text-right p-2">Clear Selection</div>
+              <div class="row">
+                <div class="show-calendar col-6 d-md-none p-2 pl-3">Show calendar</div>
+                <div class="hide-calendar col-6 d-md-none p-2 pl-3">hide calendar</div>
+                <div class="clear-selection col-6 col-md-12 text-right p-2 pr-3">Clear Selection</div>
+              </div>
               <div>
                 <div class="events-date-picker"/>
               </div>
