--- a/app/views/web/ost/index/_ost_kit.erb
+++ b/app/views/web/ost/index/_ost_kit.erb
@@ -36,7 +36,7 @@
                 </svg>
                 <h5 class="d-inline-block ml-1 mb-0">APIs & SDKs</h5>
               </div>
-              <p class="my-2">OST KIT provides RESTful APIs and SDKs to help you easily setup and integrate your token economy into your existing app, enabling you to integrate & test Branded Tokens with minimal effort.</p>
+              <p class="my-2">OST KIT provides RESTful APIs and SDKs to help you easily set up and integrate your token economy into your existing app, enabling you to integrate and test Branded Tokens with minimal effort.</p>
             </div>
             <div>
               <a href="https://dev.ost.com/" class="text-link" target="_blank" title="Read More">Read More</a>
