--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -4,7 +4,7 @@
       <div class="row align-items-center">
         <div class="col-sm-12 col-md-6">
           <h2>Scalable Token Economies</h2>
-          <p>OST is designed for Internet-grade transaction volumes and speeds. OST leads development of the OpenST Protocol for launching Branded Token economies for mainstream businesses, and OpenST Mosaic a scaling solution for finalizing many thousands of transactions per second asynchronously on Ethereum at low cost.</p>
+          <p>OST is designed for internet-grade transaction volumes and speeds. OST leads development of the OpenST Protocol for launching Branded Token economies for mainstream businesses and OpenST Mosaic, a scaling solution for finalizing many thousands of transactions per second asynchronously on Ethereum at low cost.</p>
           <div class="my-4">
             <a href="https://github.com/OpenSTFoundation" class="btn btn-primary my-2 my-md-3" title="GITHUB" target="_blank">GITHUB</a>
             <a href="https://discuss.openst.org/" class="btn btn-secondary openst-forum my-2 my-md-3 ml-3 " title="PROTOCOL FORUM" target="_blank">PROTOCOL FORUM</a>
@@ -31,7 +31,7 @@
                 </svg>
                 <h5>BRANDED TOKENS PROTOCOL</h5>
               </div>
-              <p>The OpenST Protocol enables the creation of Branded Tokens as stored value on auxilliary blockchains with the value of those tokens backed by staked cryptoassets on Ethereum.</p>
+              <p>The OpenST Protocol enables the creation of Branded Tokens as stored value on auxiliary blockchains with the value of those tokens backed by staked cryptoassets on Ethereum.</p>
             </div>
             <div>
               <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="white-paper-link d-inline-block" target="_blank" title="WHITE PAPER">
@@ -64,7 +64,7 @@
                 </svg>
                 <h5>SCALABILITY PROTOCOL</h5>
               </div>
-              <p style="flex: 1 1 auto;">OpenST Mosaic introduces metablockchains to enable Internet-grade transaction throughput on Ethereum. Your transactions run at lightning speed on auxilliary blockchains with economic finality secured asynchronously on Ethereum.</p>
+              <p style="flex: 1 1 auto;">OpenST Mosaic introduces metablockchains to enable internet-grade transaction throughput on Ethereum. Your transactions run at lightning speed on auxiliary blockchains with economic finality secured asynchronously on Ethereum.</p>
             </div>
             <div>
               <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" class="white-paper-link d-inline-block" target="_blank" title="WHITE PAPER">
