--- a/app/views/web/ost/index/_liquidity_token_exchange.erb
+++ b/app/views/web/ost/index/_liquidity_token_exchange.erb
@@ -12,7 +12,7 @@
        </div>
        <div class="col-md-6 my-auto text-content">
          <h3 class="white-header">Branded Liquidity Platform</h3>
-         <p class="mt-4">OST's Branded Token Exchange, BTEX, will let your customers swap the Branded Tokens you create for other forms of value. OST is working towards securing licenses worldwide for BTEX on behalf of our clients.</p>
+         <p class="mt-4">OST's Branded Token Exchange, BTEX, will let your customers swap the Branded Tokens you create for other forms of value. OST is working toward securing licenses worldwide for BTEX on behalf of our clients.</p>
        </div>
      </div>
    </div>
