--- a/app/views/web/ost/index/_subscribe.erb
+++ b/app/views/web/ost/index/_subscribe.erb
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-12">
           <div class="container-subscribe">
-            <h2 class="font-weight-normal">Signup For Updates</h2>
+            <h2 class="font-weight-normal">Sign up For Updates</h2>
             <form class="ost-form" id="subscribe-form">
               <div class="subscribe">
                 <div class="form-group mb-0">
@@ -22,7 +22,7 @@
                         </div>
                       </div>
                       <span class="font-weight-normal info-text ost-nav-link">
-                        I agree to receive the OST e-mail Newsletter with updates on OST products and services by
+                        I agree to receive the OST email newsletter with updates on OST products and services from
                         <a href="/">OST.COM LTD.</a> </span>
                     </label>
                     <div class="error confirmation_error" data-for="subscribe_confirmation"></div>
