--- a/app/views/web/ost/events_news/_events.erb
+++ b/app/views/web/ost/events_news/_events.erb
@@ -1,5 +1,5 @@
 <div class="events-container" id="events">
-  <div class="row my-5">
+  <div class="row py-5">
     <div class="container ">
 
       <h3 class="text-center">
@@ -99,7 +99,7 @@ location=<%=item['event_desc']%>
             <div class="col-12 h-100 p-3 date-section-background">
               <div class="row">
                 <div class="show-calendar col-6 d-md-none p-2 pl-3">Show calendar</div>
-                <div class="hide-calendar col-6 d-md-none p-2 pl-3">hide calendar</div>
+                <div class="hide-calendar col-6 d-md-none p-2 pl-3">Hide calendar</div>
                 <div class="clear-selection col-6 col-md-12 text-right p-2 pr-3">Clear Selection</div>
               </div>
               <div>
