--- a/app/views/web/ost/events_news/_news_content.erb
+++ b/app/views/web/ost/events_news/_news_content.erb
@@ -25,7 +25,7 @@
   {{/ifArticle}}
 
   <div class="carousel-title">
-    {{news_list_title}}
+    {{{news_list_title}}}
   </div>
 
   <div class="w-100 date-wrapper">
