--- a/app/assets/stylesheets/web/ost/events-news/Events.scss
+++ b/app/assets/stylesheets/web/ost/events-news/Events.scss
@@ -142,6 +142,9 @@
       content: 'X';
       padding: $mark-padding;
     }
+    .clear-selection {
+      visibility: hidden;
+    }
     .date-section-background{
       background-color: $gray-100;
     }
