--- a/app/views/web/ost/index/_subscribe.erb
+++ b/app/views/web/ost/index/_subscribe.erb
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-12">
           <div class="container-subscribe">
-            <h2 class="font-weight-normal">Sign Up For Updates</h2>
+            <h2 class="font-weight-normal">Sign Up for Updates</h2>
             <form class="ost-form" id="subscribe-form">
               <div class="subscribe">
                 <div class="form-group mb-0">
