--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -1,4 +1,4 @@
-<section class="container-fluid container-partners py-5">
+<section class="container-fluid container-partners py-5" id="partners">
   <div class="row">
     <div class="col col-lg-10 col-xl-9 mx-md-auto">
       <div class="row">
@@ -52,9 +52,8 @@
               <span class="partners-floship-icon"></span>
             </div>
           </div>
-<!--          <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet OST Partners">MEET OST PARTNERS</a>-->
-          <a href="/challenges-2" class="btn btn-primary my-2 my-md-3" title="VIEW INTEGRATIONS">VIEW INTEGRATIONS</a>
-<!--          <a href="/challenges-2" class="btn btn-secondary my-2 ml-sm-3 ml-lg-0 ml-xl-3 d-none d-md-inline-block" title="VIEW INTEGRATIONS">VIEW INTEGRATIONS</a>-->
+          <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet Our Partners">MEET OUR PARTNERS</a>
+          <a href="/challenges-2" class="btn btn-secondary my-2 ml-sm-3 ml-lg-0 ml-xl-3 d-none d-md-inline-block" title="ALPHA CHALLENGES">ALPHA CHALLENGES</a>
         </div>
         <div class="col-12 col-md-6 col-lg-6 d-none d-lg-block mt-3">
           <div class="play-video" id="partner-video">
