--- a/app/views/web/ost/partners/_use_cases.erb
+++ b/app/views/web/ost/partners/_use_cases.erb
@@ -116,7 +116,7 @@
     <% end %>
   </div>
   <div class="text-center">
-    <a class="btn btn-primary text-center mt-5" href="/challenges" title="VIEW ALL ALPHA PROJECTS" target="_blank">VIEW ALL ALPHA PROJECTS</a>
+    <a class="btn btn-primary text-center mt-5" href="/challenges" title="VIEW ALL ALPHA PROJECTS">VIEW ALL ALPHA PROJECTS</a>
   </div>
 </section>
 
