fixed nav bar for mobile and resize

--- a/app/views/web/ost/index/_uber_banner.erb
+++ b/app/views/web/ost/index/_uber_banner.erb
@@ -7,7 +7,7 @@
 %>
 
 
-<div class="container-fluid uber-banner-winners d-none d-md-block" style="background-color: <%= banner_background_color  %>">
+<div class="container-fluid uber-banner-winners uber-banner-desktop d-none d-md-block" style="background-color: <%= banner_background_color  %>">
   <div class="row">
     <div class="col-12 col-md-10 mx-auto text-center align-middle">
       <svg class="svg-megaphone align-middle">
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<div class="container-fluid uber-banner-winners d-md-none" style="background-color: <%= banner_background_color  %>">
+<div class="container-fluid uber-banner-winners uber-banner-mobile d-md-none" style="background-color: <%= banner_background_color  %>">
   <div class="row">
     <div class="col-12 col-md-10 mx-auto text-center align-middle">
       <svg class="svg-megaphone align-middle">
